--- a/tables/optimizaciones.tex
+++ b/tables/optimizaciones.tex
@@ -146,6 +146,8 @@ ejecución}
 &	7	&	58.75	&	99.29	&	-	&	-	\\
   \bottomrule
 \end{tabular}
+\label{tab:results-fajita}
+
 \end{table}
 
 \begin{table}
@@ -228,6 +230,7 @@ ejecución}
 &	8	&	96.94	&	220.18	&	-	&	-	\\
   \bottomrule
 \end{tabular}
+\label{tab:results-roops}
 \end{table}
 \vspace{0.3cm}
 \begin{table}[H]
@@ -313,6 +316,7 @@ ejecución}
 % &	10	&	8.14	&	09.04	&	-	&	-	\\
 %   \bottomrule
 \end{tabular}
+\label{tab:results-korat}
 \end{table}
 
 
@@ -394,5 +398,6 @@ ejecución}
 &	6	&	866.71	&	-	&	-	&	-	\\
   \bottomrule
 \end{tabular}
+\label{tab:results-kiasan}
 \end{table}
 
