fixed bugs in tables and cites

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -357,6 +357,12 @@
   year={2012}
 }
 
+@misc{Roops,
+  title        = {{Roops}: Benchmarks for reachability in object-oriented programs},
+  howpublished = {\url{https://code.google.com/archive/p/roops/}},
+  note         = {Google Code Archive. Accessed: 2025-12-22}
+}
+
 @misc{apache,
 	Date-Added = {2018-11-20 04:22:28 +0000},
 	Date-Modified = {2018-11-20 04:27:36 +0000},
