--- a/main.tex
+++ b/main.tex
@@ -86,8 +86,8 @@
         frame=tb,
         language=Java,
         numbers=left,
-      	aboveskip=0mm,
-      	belowskip=0mm,
+        aboveskip=0.8\baselineskip,
+        belowskip=0.8\baselineskip,
       	showstringspaces=false,
       	columns=flexible,
       	basicstyle={\scriptsize\ttfamily}, 
