--- a/tables/optimizaciones.tex
+++ b/tables/optimizaciones.tex
@@ -1,7 +1,6 @@
 
 \begin{table}[H]
 \scriptsize
-
 \centering
 \begin{tabular}{ l r  r  r  r  r  }
   \toprule
@@ -67,8 +66,6 @@ ejecución}
 \begin{table}[H]
 \scriptsize
 \centering
-\label{tab:results-obj1}
-
 \begin{tabular}{ l r  r  r  r  r  }
   \toprule
   \multicolumn{6}{c}{\textbf{FAJITA}} \\
@@ -146,6 +143,8 @@ ejecución}
 &	7	&	58.75	&	99.29	&	-	&	-	\\
   \bottomrule
 \end{tabular}
+\caption{Impacto de las optimizaciones de BEAPI en su tiempo de
+ejecución}
 \label{tab:results-fajita}
 
 \end{table}
@@ -153,7 +152,6 @@ ejecución}
 \begin{table}
 \scriptsize
 \centering
-\label{tab:results-obj2}
 \begin{tabular}{ l r  r  r  r  r  }
   \toprule
   \multicolumn{6}{c}{\textbf{ROOPS}} \\
@@ -230,6 +228,8 @@ ejecución}
 &	8	&	96.94	&	220.18	&	-	&	-	\\
   \bottomrule
 \end{tabular}
+\caption{Impacto de las optimizaciones de BEAPI en su tiempo de
+ejecución}
 \label{tab:results-roops}
 \end{table}
 \vspace{0.3cm}
@@ -237,7 +237,6 @@ ejecución}
 \scriptsize
 
 \centering
-\label{tab:results-obj3}
 \begin{tabular}{ l r  r  r  r  r  }
   \toprule
   \multicolumn{6}{c}{\textbf{Korat}} \\
@@ -316,6 +315,8 @@ ejecución}
 % &	10	&	8.14	&	09.04	&	-	&	-	\\
 %   \bottomrule
 \end{tabular}
+\caption{Impacto de las optimizaciones de BEAPI en su tiempo de
+ejecución}
 \label{tab:results-korat}
 \end{table}
 
@@ -323,7 +324,6 @@ ejecución}
 \begin{table}[H]
 \scriptsize
 \centering
-\label{tab:results-obj4}
 \begin{tabular}{ l r  r  r  r  r  }
   \toprule
   \multicolumn{6}{c}{\textbf{Kiasan}} \\
@@ -398,6 +398,8 @@ ejecución}
 &	6	&	866.71	&	-	&	-	&	-	\\
   \bottomrule
 \end{tabular}
+\caption{Impacto de las optimizaciones de BEAPI en su tiempo de
+ejecución}
 \label{tab:results-kiasan}
 \end{table}
 
