--- a/tables/randoopvsBuilders.tex
+++ b/tables/randoopvsBuilders.tex
@@ -22,7 +22,7 @@
   RSer-MGO	& 180	 &  139857/1957998  & 202   &  85	&  109  \\
   \midrule
   \end{tabular}
-  \caption{Comparativa de diferentes tecnicas en HashSet}
+  \caption{Comparativa de diferentes técnicas en HashSet}
   \label{tab:hashSetTools_builders}
   \end{table}
 
@@ -51,7 +51,7 @@
   RSer-MGO	& 180	 &  254002/3556028 &  37  & 154 	&  111  \\
 \midrule
 \end{tabular}
-\caption{Comparativa de diferentes tecnicas en TreeSet}
+\caption{Comparativa de diferentes técnicas en TreeSet}
 \label{tab:treeSetTools_builders}
 \end{table}
 
@@ -79,7 +79,7 @@
   RSer-MGO	& 180	 & 75285/1129275  & 8   &  162	& 156\\
 \midrule
 \end{tabular}
-\caption{Comparativa de diferentes tecnicas en TreeMap}
+\caption{Comparativa de diferentes técnicas en TreeMap}
 \label{tab:treeMapTools_builders}
 \end{table}
 
@@ -107,7 +107,7 @@
   RSer-MGO	& 180	 &  142935/4145115  &  99  & 49 	&58   \\
 \midrule
 \end{tabular}
-\caption{Comparativa de diferentes tecnicas en LinkedList}
+\caption{Comparativa de diferentes técnicas en LinkedList}
 \label{tab:linkedListTools_builders}
 \end{table}
 
@@ -135,6 +135,6 @@ RSer-API	& 180	&  89614/2419578  & 174   & 108 	&  120  \\
 RSer-MGO	& 180	&  92531/2498337  &  201  &  122	&  127  \\
 \midrule
 \end{tabular}
-\caption{Comparativa de diferentes tecnicas en HashMap}
+\caption{Comparativa de diferentes técnicas en HashMap}
 \label{tab:hashMapTools_builders}
 \end{table}
