--- a/tables/randoopvsBeapi.tex
+++ b/tables/randoopvsBeapi.tex
@@ -31,7 +31,7 @@
   BEAPI-s15 &   167  & 249936/3499104  & 195 & 85 	&   109 \\
 \midrule
 \end{tabular}
-\caption{Comparativa de diferentes tecnicas en HashSet}
+\caption{Comparativa de diferentes técnicas en HashSet}
 \label{tab:hashSetTools_beapi}
 \end{table}
 
@@ -70,7 +70,7 @@
 
 \midrule
 \end{tabular}
-\caption{Comparativa de diferentes tecnicas en TreeSet}
+\caption{Comparativa de diferentes técnicas en TreeSet}
 \label{tab:treeSetTools_beapi}
 \end{table}
 
@@ -102,7 +102,7 @@
   RSer-MGO	& 180	 & 75285/1129275  & 8   &  162	& 156\\
 \midrule
 \end{tabular}
-\caption{Comparativa de diferentes tecnicas en TreeMap}
+\caption{Comparativa de diferentes técnicas en TreeMap}
 \label{tab:treeMapTools_beapi}
 \end{table}
 
@@ -136,7 +136,7 @@
   RSer-MGO	& 180	 &  142935/4145115  &  99  & 49 	&58   \\
 \midrule
 \end{tabular}
-\caption{Comparativa de diferentes tecnicas en LinkedList}
+\caption{Comparativa de diferentes técnicas en LinkedList}
 \label{tab:linkedListTools_beapi}
 \end{table}
 
@@ -167,6 +167,6 @@ RSer-API	& 180	&  89614/2419578  & 174   & 108 	&  120  \\
 RSer-MGO	& 180	&  92531/2498337  &  201  &  122	&  127  \\
 \midrule
 \end{tabular}
-\caption{Comparativa de diferentes tecnicas en HashMap}
+\caption{Comparativa de diferentes técnicas en HashMap}
 \label{tab:hashMapTools_beapi}
 \end{table}
