--- a/experimental.tex
+++ b/experimental.tex
@@ -425,9 +425,6 @@ los resultados que pueden obtener las herramientas automáticas de generación d
 tests por sí solas.
 
 \input{tables/randoopvsBuilders}
-\pp{En las tablas hay algunos errores. Faltan acentos en varias palabras. Para randoop poner numtests/-- como
-indicando que Obj no aplica. Hay una columna que dice Scope que no va}
-
 
 En \texttt{LinkedList} (\ref{tab:linkedListTools_builders}), la estructura más simple de todas las
 consideradas, \texttt{RSer-MGO} y \texttt{RSer-API} logran la mayor cobertura en
@@ -694,7 +691,7 @@ estas estructuras.
 En resumen, la Tabla \ref{table:korat-beapi} muestra que para el benchmark \texttt{KORAT} la
 herramienta \textsf{Korat} es más veloz en 4 de 6 clases; 
 en \texttt{FAJITA}, \textsf{BEAPI} es más rápido que \textsf{Korat} en 4 de 7
-casos \pp{Cacho: volvé a chequear los números de todo este párrafo cuando corrijas las tablas} \cacho{Hecho!}.
+casos.
 La Tabla \ref{table:korat-beapi1} indica que en
 \texttt{ROOPS}, \textsf{BEAPI} es más rápido en 6 de 7 casos; 
 en \texttt{Kiasan}, \textsf{Korat} es más rápido en 7 de 8 clases.
